# hellohq-wasm-runtime

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: wasi-guests-ios-size.md
examples/: bench_ios.rs  gen_bench_artifact.rs  pulley_latency.rs
include/: hellohq_wasm_runtime.h  module.modulemap
ios-bench/: Package.swift  README.md
ios-bench/Tests/RuntimeBenchTests/: RuntimeBenchTests.swift
ios-bench/Tests/RuntimeBenchTests/Resources/: compute_pulley.cwasm
scripts/: build-release.sh  regen_probe_guest.sh
src/: capstone.rs  fetch_gate.rs  inference.rs  lib.rs  plugin_host.rs  plugin_host_bytes.rs  plugin_host_full.rs  plugin_host_storage_events.rs  storage_events.rs  wasi_guests.rs  wasi_http.rs  wasi_http_probe.rs
test-guest/: Cargo.toml
test-guest-http/: Cargo.toml
test-guest-http-02/: Cargo.toml
test-guest-http-02/src/: lib.rs
test-guest-http-post/: Cargo.toml
test-guest-http-post/src/: lib.rs
test-guest-http-req-trailers/: Cargo.toml
test-guest-http-req-trailers/src/: lib.rs
test-guest-http/src/: lib.rs
test-guest-inference/: Cargo.toml
test-guest-inference/src/: lib.rs
test-guest-p3/: Cargo.toml
test-guest-p3/src/: lib.rs
test-guest-plugin-http/: Cargo.toml
test-guest-plugin-http/src/: lib.rs
test-guest-storage-events/: Cargo.toml
test-guest-storage-events/src/: lib.rs
test-guest-workspace-run/: Cargo.toml
test-guest-workspace-run/src/: lib.rs
test-guest/src/: lib.rs
tests/: c_abi.rs  capstone.rs  go_guest.rs  http02_guest.rs  http_handle.rs  inference_complete.rs  js_guest.rs  plugin_host_full_p3.rs  plugin_host_p3.rs  plugin_host_storage_events_p3.rs  plugin_http_world.rs  storage_events.rs  streaming_precompiled.rs  workspace_probe.rs  workspace_transport.rs
tests/fixtures/: README.md  capstone_plugin.component.wasm  go_guest.component.wasm  http02_guest.component.wasm  http_guest.wasm  http_guest_post.wasm  http_guest_req_trailers.wasm  inference_guest.wasm  p3_probe_guest.wasm  plugin_http_guest.wasm  storage_events_guest.wasm  workspace_probe_guest.wasm  workspace_run_guest.wasm
wit/: probe.wit  world.wit
wit-wasi/: world.wit
wit-wasi-02/: world.wit
