[package]
name = "hellohq-wasm-runtime"
version = "0.0.1"
edition = "2021"
description = "Async-first WebAssembly plugin runtime: Wasmtime (Component Model + WASI 0.3 async) over a C ABI, built for async host capabilities like streaming AI inference."
license = "Apache-2.0"
repository = "https://github.com/HelloHQ/hellohq-wasm-runtime"
keywords = ["webassembly", "wasmtime", "wasi", "component-model", "ffi"]
categories = ["wasm", "api-bindings"]
publish = false

[lib]
name = "hellohq_wasm_runtime"
# staticlib → iOS / static linking; cdylib → desktop/Android shared lib; rlib → tests.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Pinned via `cargo add` (exact published version in Cargo.lock). 45.0.1 is the
# latest published; the spike/P1 bump to Wasmtime 46 lands WASI 0.3 + Component
# Model Async by default. We disable default features and opt in explicitly so
# the iOS build can drop Cranelift (the JIT compiler) and ship only the runtime
# + Pulley interpreter — the no-JIT payload the < 8 MB Spike-1 budget measures.
wasmtime = { version = "45.0.1", default-features = false, features = [
  "std",
  "runtime",
  "pulley",
  "component-model",
  # Component Model Async (native `async func` / `future` / `stream`). Present
  # in 45 behind this feature + `Config::wasm_component_model_async(true)`;
  # Wasmtime 46 only flips it on by default. NOT Cranelift-dependent, so the
  # no-JIT (iOS) build runs async components too.
  "component-model-async",
  "async",
] }
# Minimal executor to drive `call_async` to completion behind a synchronous C
# entrypoint — the "block on a blockable worker isolate" bridge (docs 51/52).
# Base (non-optional) because the P3 host-call round-trip must work on the iOS
# no-JIT build too, not only `compile` builds.
pollster = "0.4.0"
# Oneshot + mpsc channels for the P3 round-trip: the host import awaits a value
# the caller (Dart) supplies via `hwr_p3_resolve`/streaming push from another
# thread. `futures-util` gives the async `StreamExt::next` for the streaming
# (P3 v2) inbound channel.
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[features]
# Desktop / Android / CI: in-process Cranelift compilation + `wat` parsing +
# the async block_on executor. iOS builds with `--no-default-features` → runtime
# + Pulley interpreter only (modules precompiled off-device; Cranelift unshipped).
default = ["compile"]
compile = ["wasmtime/cranelift", "wasmtime/wat"]
# Builds `examples/bench_ios.rs`, which embeds the precompiled artifact via
# include_bytes! (run `gen_bench_artifact` first). Kept behind a feature so the
# default `cargo test`/`cargo build` never needs the generated file present.
ios-bench = []
# The hand-built wasi:http@0.3-rc host (STAGE 1: resource host scaffolding).
# Behind a feature so default/no-default builds are unaffected. Needs cranelift
# (the linker/engine in the unit test compiles a config) — implied via `compile`
# is NOT required since the test builds only an Engine, but the bindgen output
# uses component-model-async which is in the base wasmtime features.
wasi-http = []

# Examples gated by the features they need, so `cargo build --no-default-features
# [--examples]` (the iOS no-JIT link check) never tries to compile a Cranelift-only
# example. bench_ios runs the no-JIT path → needs only `ios-bench`.
[[example]]
name = "pulley_latency"
required-features = ["compile"]

[[example]]
name = "gen_bench_artifact"
required-features = ["compile"]

[[example]]
name = "bench_ios"
required-features = ["ios-bench"]

[profile.release]
opt-level = "z"
lto = true
strip = true
# panic = unwind (default) so the FFI entrypoints' catch_unwind converts any
# panic into an error return instead of unwinding across the C boundary.
#
# NOTE: the Rust toolchain is pinned in rust-toolchain.toml. rustc 1.96.0
# regressed fat-LTO symbol export for `staticlib` crates: the #[no_mangle]
# `hwr_*` FFI exports get internalized and dead-stripped, so the iOS xcframework
# (the only staticlib consumer) ships with zero callable symbols. cdylibs
# (macOS/Linux/Windows/Android) are unaffected — they carry an explicit export
# list. The pin keeps us on a toolchain that retains the exports; do NOT bump it
# without re-verifying `nm` shows hwr_* in the iOS .a (see tests + CI).
