[package]
name = "hellohq-wasm-runtime"
version = "0.0.1"
edition = "2021"
description = "Async-first WebAssembly plugin runtime: Wasmtime (Component Model + WASI 0.3 async) over a C ABI, built for async host capabilities like streaming AI inference."
license = "Apache-2.0"
repository = "https://github.com/HelloHQ/hellohq-wasm-runtime"
keywords = ["webassembly", "wasmtime", "wasi", "component-model", "ffi"]
categories = ["wasm", "api-bindings"]
publish = false

[lib]
name = "hellohq_wasm_runtime"
# staticlib → iOS / static linking; cdylib → desktop/Android shared lib; rlib → tests.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Pinned via `cargo add` (exact published version in Cargo.lock). 45.0.1 is the
# latest published; the spike/P1 bump to Wasmtime 46 lands WASI 0.3 + Component
# Model Async by default. We disable default features and opt in explicitly so
# the iOS build can drop Cranelift (the JIT compiler) and ship only the runtime
# + Pulley interpreter — the no-JIT payload the < 8 MB Spike-1 budget measures.
wasmtime = { version = "45.0.1", default-features = false, features = [
  "std",
  "runtime",
  "pulley",
  "component-model",
  # Component Model Async (native `async func` / `future` / `stream`). Present
  # in 45 behind this feature + `Config::wasm_component_model_async(true)`;
  # Wasmtime 46 only flips it on by default. NOT Cranelift-dependent, so the
  # no-JIT (iOS) build runs async components too.
  "component-model-async",
  "async",
] }
# Minimal executor to drive `call_async` to completion behind a synchronous C
# entrypoint — the "block on a blockable worker isolate" bridge (docs 51/52).
# Base (non-optional) because the P3 host-call round-trip must work on the iOS
# no-JIT build too, not only `compile` builds.
# WASI 0.2 host implementation, version-matched to `wasmtime` (45). Provides the
# `wasi:*@0.2.x` interfaces JS (jco) and Go (TinyGo) SDK components import — Rust
# no-std guests import only `hellohq:plugin/*`, but those richer guests embed a
# language runtime that ALSO imports the wasi:0.2 surface, so the host must
# satisfy it (locked-down) or instantiation fails. OPTIONAL + behind the
# `wasi-guests` feature: it pulls heavy deps (tokio, cap-std, …) and is Cranelift-
# adjacent, so default / `--no-default-features` (the iOS no-JIT size budget)
# stay unaffected. Pinned to 45 so its WASI 0.2 interfaces match wasmtime 45's
# component-model ABI (a version mismatch fails to compile / links the wrong
# wasi version).
wasmtime-wasi = { version = "45", optional = true }
# WASI 0.2 `wasi:http` host, version-matched to `wasmtime` (45). JS (jco)
# components import `wasi:http@0.2` as part of the engine baseline even when
# unused, so the interface must be PRESENT to instantiate. We register it behind
# a GATE (`GatedHttpHooks` in `src/wasi_guests.rs` + `src/fetch_gate.rs`): every
# outbound request must pass an origin allowlist + the H4/H5 SSRF/private-IP
# block set + https-only before the real send runs; an empty allowlist denies
# all (the safe default). Same heavy-deps / feature-gating story as
# `wasmtime-wasi` (tokio, hyper, cap-std), so it rides the `wasi-guests`
# feature only — default / `--no-default-features` (iOS no-JIT) stay unaffected.
wasmtime-wasi-http = { version = "45", optional = true }
# Only used to name the `hyper::Request` type in the gated
# `GatedHttpHooks::send_request` signature (the request body type comes from
# `wasmtime-wasi-http`). Version-matched to what `wasmtime-wasi-http@45` pulls in
# (hyper 1.x). Optional + in `wasi-guests` only — it's already a transitive dep
# of `wasmtime-wasi-http`, so this adds no new code to default/iOS builds.
hyper = { version = "1", optional = true }
# Used ONLY by the `wasi:http@0.2` gate unit tests, to build an empty
# `HyperOutgoingBody` to hand `GatedHttpHooks::send_request`. Both are already
# transitive deps of `wasmtime-wasi-http@45`; optional + in `wasi-guests` only,
# so default / `--no-default-features` (iOS no-JIT) stay unaffected.
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
pollster = "0.4.0"
# Oneshot + mpsc channels for the P3 round-trip: the host import awaits a value
# the caller (Dart) supplies via `hwr_p3_resolve`/streaming push from another
# thread. `futures-util` gives the async `StreamExt::next` for the streaming
# (P3 v2) inbound channel.
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[features]
# Desktop / Android / CI: in-process Cranelift compilation + `wat` parsing +
# the async block_on executor. iOS builds with `--no-default-features` → runtime
# + Pulley interpreter only (modules precompiled off-device; Cranelift unshipped).
default = ["compile"]
compile = ["wasmtime/cranelift", "wasmtime/wat"]
# Builds `examples/bench_ios.rs`, which embeds the precompiled artifact via
# include_bytes! (run `gen_bench_artifact` first). Kept behind a feature so the
# default `cargo test`/`cargo build` never needs the generated file present.
ios-bench = []
# The hand-built wasi:http@0.3-rc host (STAGE 1: resource host scaffolding).
# Behind a feature so default/no-default builds are unaffected. Needs cranelift
# (the linker/engine in the unit test compiles a config) — implied via `compile`
# is NOT required since the test builds only an Engine, but the bindgen output
# uses component-model-async which is in the base wasmtime features.
wasi-http = []
# Run JS (jco) / Go (TinyGo) SDK plugin components, which import a `wasi:*@0.2`
# surface in addition to `hellohq:plugin/*`. Pulls in `wasmtime-wasi` (heavy:
# tokio, cap-std) to satisfy those wasi imports with a LOCKED-DOWN ctx (no
# preopens, no env, no network) so the plugin gets no ambient FS/network — its
# real capabilities stay gated to `hellohq:plugin/*`. Implies `wasi-http`
# (reuses the `capstone` host harness module) and `compile` (the Go-guest test
# compiles a component via Cranelift). OUT of default + `--no-default-features`
# so the iOS no-JIT size is unaffected — the iOS size / cross-compile of
# wasmtime-wasi is a deliberate follow-on, not solved here.
wasi-guests = ["wasi-http", "compile", "dep:wasmtime-wasi", "dep:wasmtime-wasi-http", "dep:hyper", "dep:http-body-util", "dep:bytes"]
# Size-measurement ONLY: the `wasi-guests` host surface (wasmtime-wasi +
# wasmtime-wasi-http + the wasi_guests/fetch_gate modules) WITHOUT `compile`
# (Cranelift/wat). Lets the iOS no-JIT (Pulley) build link the WASI host so we
# can measure what wasmtime-wasi alone adds, isolated from the JIT. NOT for
# running guests (instantiating a portable component needs `compile`); the
# guest tests stay on `wasi-guests`. Out of default — purely a measurement knob.
wasi-guests-measure = ["wasi-http", "dep:wasmtime-wasi", "dep:wasmtime-wasi-http", "dep:hyper", "dep:http-body-util", "dep:bytes"]

# Examples gated by the features they need, so `cargo build --no-default-features
# [--examples]` (the iOS no-JIT link check) never tries to compile a Cranelift-only
# example. bench_ios runs the no-JIT path → needs only `ios-bench`.
[[example]]
name = "pulley_latency"
required-features = ["compile"]

[[example]]
name = "gen_bench_artifact"
required-features = ["compile"]

[[example]]
name = "bench_ios"
required-features = ["ios-bench"]

[profile.release]
opt-level = "z"
lto = true
strip = true
# panic = unwind (default) so the FFI entrypoints' catch_unwind converts any
# panic into an error return instead of unwinding across the C boundary.
#
# NOTE: the Rust toolchain is pinned in rust-toolchain.toml. rustc 1.96.0
# regressed fat-LTO symbol export for `staticlib` crates: the #[no_mangle]
# `hwr_*` FFI exports get internalized and dead-stripped, so the iOS xcframework
# (the only staticlib consumer) ships with zero callable symbols. cdylibs
# (macOS/Linux/Windows/Android) are unaffected — they carry an explicit export
# list. The pin keeps us on a toolchain that retains the exports; do NOT bump it
# without re-verifying `nm` shows hwr_* in the iOS .a (see tests + CI).
