# Isolated guest crate for the wasi:http@0.2 END-TO-END gate proof. Built for
# wasm32-unknown-unknown, turned into a component with wasm-tools, and committed
# as a fixture at ../tests/fixtures/http02_guest.component.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never
# joins the parent crate's build — `cargo test` / `cargo build` for
# hellohq-wasm-runtime are unaffected. Regen: see ../tests/fixtures/README.md.
[workspace]

[package]
name = "http02-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator. The wasi:http@0.2 world uses wasi:io poll-based
# blocking (a SYNC guest — no component-model-async needed), so the default
# features suffice.
wit-bindgen = "0.58.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
