# Isolated guest crate for the streaming-REQUEST-body (POST) end-to-end proof.
# Built for wasm32-unknown-unknown, turned into a component with wasm-tools, and
# committed as a fixture at ../tests/fixtures/http_guest_post.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never
# joins the parent crate's build. Regen: see ../tests/fixtures/README.md.
[workspace]

[package]
name = "http-guest-post"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `async-spawn` enables `wit_bindgen::spawn_local`, used to write the request
# body stream concurrently with the `handle().await`.
wit-bindgen = { version = "0.58.0", features = ["async-spawn"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
