# Isolated guest crate for the STAGE 3 wasi:http@0.3-rc end-to-end proof. Built
# for wasm32-unknown-unknown, turned into a component with wasm-tools, and
# committed as a fixture at ../tests/fixtures/http_guest.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never
# joins the parent crate's build — `cargo test` / `cargo build` for
# hellohq-wasm-runtime are unaffected. Regen: see ../tests/fixtures/README.md.
[workspace]

[package]
name = "http-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator. The wasi:http world uses streams/futures + an
# async `handle`, so we keep the default features (the async runtime + std-free
# allocator shim wit-bindgen provides for component-model-async).
wit-bindgen = "0.58.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
