# Isolated guest crate for the ai:inference streaming end-to-end proof. Built
# for wasm32-unknown-unknown, turned into a component with wasm-tools, and
# committed as a fixture at ../tests/fixtures/inference_guest.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never
# joins the parent crate's build. Regen: see ../tests/fixtures/README.md.
[workspace]

[package]
name = "inference-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator. The inference world uses a `stream<string>` +
# an async `run`, so we keep the default features (the async runtime + std-free
# allocator shim wit-bindgen provides for component-model-async).
wit-bindgen = "0.58.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
