# Isolated guest crate for the SYNCHRONOUS storage + events end-to-end proof
# (doc 53, the last two interfaces). Built for wasm32-unknown-unknown (NO wasi),
# turned into a component with wasm-tools, and committed as a fixture at
# ../tests/fixtures/storage_events_guest.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never
# joins the parent crate's build. Regen: see ../tests/fixtures/README.md.
[workspace]

[package]
name = "storage-events-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator. The storage/events world is all SYNC funcs (no
# stream, no async export), so — like the workspace probe — we go no_std with our
# own allocator (dlmalloc) and pull in NO wasi: the host test linker provides
# only `storage` + `events`, so any wasi import would fail instantiation.
wit-bindgen = { version = "0.58.0", default-features = false, features = ["macros"] }
dlmalloc = { version = "0.2", features = ["global"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
