# Isolated guest crate for the C1 typed-host-over-P3 production proof. Built for
# wasm32-unknown-unknown (NO wasi), turned into a component with wasm-tools, and
# committed as a fixture at ../tests/fixtures/workspace_run_guest.wasm.
#
# The empty [workspace] table makes this its own workspace root so it never joins
# the parent crate's build. Regen: see ../scripts/regen_probe_guest.sh.
[workspace]

[package]
name = "workspace-run-guest"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator. The typed `workspace` import is all SYNC funcs
# (no stream/async), so — like the storage/events guest — we go no_std with our
# own allocator (dlmalloc) and pull in NO wasi: the host linker provides only
# `workspace`, so any wasi import would fail instantiation.
wit-bindgen = { version = "0.58.0", default-features = false, features = ["macros"] }
dlmalloc = { version = "0.2", features = ["global"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
